--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,21 +1,21 @@
 version: 2
 updates:
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
       interval: "daily"
     # Security updates only
     open-pull-requests-limit: 0
 
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: npm
+    directory: /actions/aws-params-env-action/
     schedule:
       interval: "daily"
     # Security updates only
     open-pull-requests-limit: 0
 
-  - package-ecosystem: "terraform" # Works for both Terraform and OpenTofu
-    directory: "/"
+  - package-ecosystem: terraform # Works for both Terraform and OpenTofu
+    directory: /
     schedule:
       interval: "daily"
     open-pull-requests-limit: 0
