--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: "daily"
+      interval: daily
     # Security updates only
     open-pull-requests-limit: 0
 
