--- a/.github/workflows/tf-opt-out-import.yml
+++ b/.github/workflows/tf-opt-out-import.yml
@@ -48,6 +48,8 @@ jobs:
         app: [bcda, dpc]
         env: [test]
         include:
+          - env: dev
+            app: dpc
           - env: prod
             app: bcda
     steps:
@@ -56,7 +58,7 @@ jobs:
       - uses: cmsgov/cdap/actions/setup-tenv@8343fb96563ce4b74c4dececee9b268f42bd4a40
       - uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{ contains(fromJSON('["test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
+          role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
       - run: tofu init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
       - run: tofu plan -out=tf.plan
