--- a/.github/workflows/tofu-checks.yml
+++ b/.github/workflows/tofu-checks.yml
@@ -1,4 +1,4 @@
-name: tofu-format-and-validate
+name: tofu-checks
 
 on:
   workflow_dispatch:
@@ -21,4 +21,4 @@ jobs:
       - uses: actions/checkout@v4
       - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159  # v3.9.2
       - uses: cmsgov/cdap/actions/setup-tenv@8343fb96563ce4b74c4dececee9b268f42bd4a40
-      - run: scripts/tofu-format-and-validate-diff
+      - run: scripts/tofu-checks
