--- a/actions/setup-sops/action.yml
+++ b/actions/setup-sops/action.yml
@@ -22,10 +22,10 @@ runs:
         if cosign version > /dev/null; then
           #Download the binary and checksums file
           echo "Downloading SOPS version ${SOPS_VERSION}..."
-          curl -LO "${BASE_URL}/${SOPS_VERSION}/${BINARY_NAME}"
-          curl -LO "${BASE_URL}/${SOPS_VERSION}/${CHECKSUMS_FILE}"
-          curl -LO "${BASE_URL}/${SOPS_VERSION}/${CHECKSUMS_PEM}"
-          curl -LO "${BASE_URL}/${SOPS_VERSION}/${CHECKSUMS_SIG}"
+          curl -SsLO "${BASE_URL}/${SOPS_VERSION}/${BINARY_NAME}"
+          curl -SsLO "${BASE_URL}/${SOPS_VERSION}/${CHECKSUMS_FILE}"
+          curl -SsLO "${BASE_URL}/${SOPS_VERSION}/${CHECKSUMS_PEM}"
+          curl -SsLO "${BASE_URL}/${SOPS_VERSION}/${CHECKSUMS_SIG}"
           
           echo "Verifying checksum..."
           cosign verify-blob ${CHECKSUMS_FILE} \
