--- a/.github/workflows/tf-sops-test.yml
+++ b/.github/workflows/tf-sops-test.yml
@@ -25,8 +25,8 @@ jobs:
           - app: cdap
             env: mgmt
     steps:
-    - name: Install Cosign to verify sops install
-      uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159
+#    - name: Install Cosign to verify sops install
+#      uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159
     - name: Install sops
       uses: cmsgov/cdap/actions/setup-sops@d5076d6980e1fcf972277ed6a3cb3cc608206b3f
     - name: Call SOPS
