--- a/.github/workflows/tofu-plan.yml
+++ b/.github/workflows/tofu-plan.yml
@@ -2,6 +2,10 @@ name: tofu-plan
 
 on:
   workflow_dispatch:
+    inputs:
+      all_services:
+        required: false
+        type: boolean
   pull_request:
     paths:
       - 'terraform/services/**'
@@ -33,5 +37,6 @@ jobs:
           aws-region: ${{ vars.AWS_REGION }}
       - run: scripts/tofu-plan
         env:
-          app: ${{ matrix.app }}
-          env: ${{ matrix.env }}
+          ALL_SERVICES: ${{ inputs.all_services }}
+          APP: ${{ matrix.app }}
+          ENV: ${{ matrix.env }}
