--- a/.github/workflows/tf-cost-anomaly.yml
+++ b/.github/workflows/tf-cost-anomaly.yml
@@ -51,11 +51,9 @@ jobs:
           role-to-assume: arn:aws:iam::${{ contains(fromJSON('["dev", "test"]'), matrix.env) && secrets.NON_PROD_ACCOUNT || secrets.PROD_ACCOUNT }}:role/delegatedadmin/developer/${{ matrix.app }}-${{ matrix.env }}-github-actions
           aws-region: ${{ vars.AWS_REGION }}
       - run: tofu init -backend-config=../../backends/${{ matrix.app }}-${{ matrix.env }}.s3.tfbackend
-      - run: tofu plan -exclude=module.sns_to_slack_queue.data.aws_iam_policy_document.sns_send_message -exclude=module.sns_to_slack_queue.aws_sns_topic_subscription.this -out=tf.plan
+      - run: tofu plan -out=tf.plan
         env:
           TF_VAR_app: ${{ matrix.app }}
           TF_VAR_env: ${{ matrix.env }}
       - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')  || github.event_name == 'schedule'
-        run: tofu apply -auto-approve tf.plan
-      - if: inputs.apply || (github.event_name == 'push' && github.ref == 'refs/heads/main')
         run: tofu apply -auto-approve tf.plan
