--- a/actions/setup-yq/action.yml
+++ b/actions/setup-yq/action.yml
@@ -5,7 +5,7 @@ outputs:
     description: Get the version we will download.
     value: ${{ steps.get-version.outputs.yq-latest-version }}
   checksum:
-    description: Checksum for the downloaded yq binary
+    description: Checksum for the downloaded yq binary.
     value: ${{ steps.get-checksum.outputs.checksum }}
 
 runs:
@@ -22,6 +22,8 @@ runs:
         # Create a temporary directory
         TMP_CHECKSUM_DIR=$(mktemp -d)
         cd "$TMP_CHECKSUM_DIR"
+        CHECKSUM_DOWNLOAD_URL="https://github.com/mikefarah/yq/releases/download/v${{ steps.get-version.outputs.yq-latest-version }}/yq_${ARCH}"
+        CHECKSUM_HASH_DOWNLOAD_URL="https://github.com/mikefarah/yq/releases/download/v${{ steps.get-version.outputs.yq-latest-version }}/yq_${ARCH}"
 #        download checksum
 #        download checksum_hash
 #        grep for checksum
