--- a/.github/workflows/tf-config.yml
+++ b/.github/workflows/tf-config.yml
@@ -39,8 +39,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [cdap]
-        env: [mgmt]
+        app: [bcda]
+        env: [test,prod]
     steps:
       - uses: actions/checkout@v4
       - uses: sigstore/cosign-installer@d58896d6a1865668819e1d91763c7751a165e159 # v3.9.2
