--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -12,9 +12,11 @@ jobs:
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - uses: tj-actions/changed-files@24d32ffd492484c1d75e0c0b894501ddb9d30d62 # v47
-        id: changed-python-files
+        id: changed-dirs
         with:
-          files: '*.py'
+          files: |
+            terraform/services/alarm-to-slack/lambda_src/**
+          dir_names: 'true'
       - run: scripts/python-checks
         env:
-          CHANGED_PYTHON_FILES: ${{ steps.changed-python-files.outputs.all_changed_files }}
+          CHANGED_DIRS: ${{ steps.changed-dirs.outputs.all_changed_files }}
