--- a/.github/workflows/python-checks.yml
+++ b/.github/workflows/python-checks.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   pull_request:
     paths:
-      - 'terraform/services/alarm-to-slack/lambda_src/**'
+      - '**/lambda_src/**'
 
 jobs:
   python-checks:
@@ -14,8 +14,7 @@ jobs:
       - uses: tj-actions/changed-files@24d32ffd492484c1d75e0c0b894501ddb9d30d62 # v47
         id: changed-dirs
         with:
-          files: |
-            terraform/services/alarm-to-slack/lambda_src/**
+          files: '**/lambda_src/**'
           dir_names: 'true'
       - run: scripts/python-checks
         env:
